added more sites

--- a/css/audit.css
+++ b/css/audit.css
@@ -74,8 +74,9 @@ p {
     right: 0;
 }
 
+
 /* Container 2 */
-#bottom-container {
+#container2 {
     padding-bottom: 100px;
     padding-top: 50px;
     background: #f1ece7;
@@ -89,6 +90,64 @@ p {
     padding-bottom: 20px;
 }
 
+.image {
+    height: 320px;
+    width: 350px;
+    padding-top: 25px;
+}
+
+@media only screen and (max-width: 400px) {
+    .image {
+        height: 250px;
+        width: 250px;
+    }
+}
+
+
+/* Container 3 */
+#container3 {
+    background: #fff;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  
+  #container3 h2 {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+  }
+
+  #container3 p {
+    padding-bottom: 20px;
+}
+  
+
+/* Container 4 */
+#container4 {
+    padding-bottom: 100px;
+    padding-top: 100px;
+    background: #f1ece7;
+}
+
+.header {
+    padding-top: 60px;
+}
+
+.header-p {
+    padding-bottom: 20px;
+}
+
+.column-left {
+    margin-right: 100px;
+}
+
+.image2 {
+    height: 320px;
+    width: 400px;
+    padding-top: 25px;
+}
 
 @media only screen and (max-width: 400px) {
     .image {
