--- a/css/navbar2.css
+++ b/css/navbar2.css
@@ -1,153 +1,182 @@
-/* Navbar */
-nav {
+.nav-bar {
+    height: 65px;
     background: #003300;
-    height: 60px;
+    position: fixed;
     width: 100%;
     z-index: 1; /* prevents hover images in front of navbar */
-    position: fixed;
+   }
+   
+.brand {
+    position: absolute;
+    padding-left: 20px;
+    float: left;
+    line-height: 65px;
+    text-transform: uppercase;
+    font-size: 1.4em;
+}
+
+.brand a img {
+    max-height: 70px;
+}
+
+.brand a,
+.brand a:visited {
+    color: #ffffff;
     text-decoration: none;
 }
 
-label.logo {
-    color: white;
-    font-size: 35px;
-    line-height: 60px;
-    padding: 0 100px;
-    font-weight: bold;
+.nav-container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+nav {
+    float: right;
 }
 
 nav ul {
-    float: right;
-    margin-right: 20px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 nav ul li {
-    display: inline-block;
-    line-height: 60px;
-    margin: 0 5px;
+    float: left;
+    position: relative;
 }
 
-nav ul li a {
-    color: white;
-    font-size: 15px;
+nav ul li a,
+nav ul li a:visited {
+    display: block;
+    padding: 0 20px;
+    line-height: 65px;
+    background: #003300;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 17px;  /* nav link text */
     font-weight: bold;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
 }
 
-a.active,a:hover {
-background: #1b9bff;
-transition: .5s;
-}
-
-a:hover {
-    background: none;
+nav ul li a:hover,
+nav ul li a:visited:hover {
     color: #00E676;
     text-decoration: none;
-} 
-
-.checkbtn {
-font-size: 30px;
-color: white;
-float: right;
-line-height: 60px;
-margin-right: 40px;
-cursor: pointer;
-display: none;
 }
 
-#check {
-display: none;
+nav ul li a:not(:only-child):after,
+nav ul li a:visited:not(:only-child):after {
+    padding-left: 4px;
+    content: ' ▾';
 }
 
-@media (max-width: 952px) {
-label.logo {
-    font-size: 30px;
-    padding-left: 50px;
+nav ul li ul li {
+    min-width: 190px;
 }
 
-nav ul li a {
-    font-size: 16px;
+nav ul li ul li a {
+    padding: 15px;
+    line-height: 20px;
 }
+
+.nav-dropdown {
+    position: absolute;
+    display: none;
+    z-index: 1;
+    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
 }
-@media (max-width: 858px) {
-.checkbtn {
+
+.nav-mobile {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #003300;
+    height: 65px;
+    width: 70px;
+}
+
+@media only screen and (max-width: 798px) {
+.nav-mobile {
     display: block;
 }
 
-ul {
-    position: fixed;
+nav {
     width: 100%;
-    height: 100vh;
-    background: #2c3e50;
-    top: 60px;
-    left: -100%;
-    text-align: center;
-    transition: all .5s;
+    padding: 65px 0 15px; /* removes spacing from navbar when on mobile */
+}
+
+nav ul {
+    display: none;
 }
 
 nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
+    float: none;
 }
 
 nav ul li a {
-    font-size: 20px;
+    padding: 15px;
+    line-height: 20px;
+    padding-left: 25%;
+
+}
+nav ul li ul li a {
+    padding-left: 30%;
 }
 
-a:hover,a.active {
-    background: none;
-    color: #00E676;
+.nav-dropdown {
+    position: static;
 }
 
-    #check:checked ~ ul {
-        left: 0;
+.brand a img {
+    max-height: 60px;
+    margin-top: 5px;
     }
 }
 
-/* .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
+
+@media screen and (min-width: 799px) {
+.nav-list {
+    display: block !important;
+    }
 }
 
-.dropdown-content a:hover {
-    background: #1b9bff;
-    color: #00E676;
+#nav-toggle {
+    position: absolute;
+    left: 18px;
+    top: 22px;
+    cursor: pointer;
+    padding: 10px 35px 16px 0px;
+}
+
+#nav-toggle span,
+#nav-toggle span:before,
+#nav-toggle span:after {
+    cursor: pointer;
+    border-radius: 1px;
+    height: 5px;
+    width: 35px;
+    background: #ffffff;
+    position: absolute;
     display: block;
-} */
-
-
-
-ul li ul {
-    background: orange;
-    visibility: hidden;
-    text-align: center;
-    opacity: 0;
-    font-size: 15px;
-    /* width: 200px; */
-    position: absolute;
-    transition: all 0.5s ease;
-    margin-top: 0;
-    display: none;
+    content: '';
+    transition: all 300ms ease-in-out;
 }
 
-ul li:hover > ul,
-ul li ul:hover {
-  visibility: visible;
-  opacity: 1;
-  display: block;
-  width: 200px;
-  /* justify-content: center; */
+#nav-toggle span:before {
+    top: -10px;
 }
-
-ul li ul li {
-  clear: both;
-  width: 100%;
+#nav-toggle span:after {
+    bottom: -10px;
+}
+#nav-toggle.active span {
+    background-color: transparent;
+}
+#nav-toggle.active span:before, #nav-toggle.active span:after {
+    top: 0;
+}
+#nav-toggle.active span:before {
+    transform: rotate(45deg);
+}
+#nav-toggle.active span:after {
+    transform: rotate(-45deg);
 }
