--- a/css/local-seo.css
+++ b/css/local-seo.css
@@ -138,13 +138,14 @@ p {
   }
   
   .card {
-    height: 100%;;
+    height: 350px;
     margin-bottom: 100px;
     border-radius: 0;
     box-shadow: 5px 5px 15px #003300;
     transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
+    padding: 10px;
   }
   
   .card:hover {
