--- a/css/contact.css
+++ b/css/contact.css
@@ -22,7 +22,7 @@ p {
 /* Top Container */
 #top-container {
     padding-top: 200px;
-    padding-bottom: 150px;
+    /* padding-bottom: 50px; */
     text-align: center;
 }
 
