--- a/css/contact.css
+++ b/css/contact.css
@@ -12,6 +12,7 @@ body {
 h2 {
     font-size: 30px;
     font-weight: bold;
+    text-align: center;
 }
 
 p {
@@ -22,9 +23,21 @@ p {
 /* Top Container */
 #top-container {
     padding-top: 200px;
-    /* padding-bottom: 50px; */
+    padding-bottom: 100px;
     text-align: center;
 }
+
+
+/* Form */
+label (
+    padding-top: 60px;
+)
+
+.button {
+    padding-top: 20px;
+}
+
+
 
 
 /* Button */
@@ -96,4 +109,13 @@ p {
         width: 250px;
     }
 }
+
+
+
+
+
+
+
+
+
 
