--- a/css/ppc.css
+++ b/css/ppc.css
@@ -89,6 +89,10 @@ p {
     padding-bottom: 20px;
 }
 
+.image {
+    width: 400px;
+}
+
 
 @media only screen and (max-width: 400px) {
     .image {
