--- a/css/contact.css
+++ b/css/contact.css
@@ -5,114 +5,100 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: "Quicksand", sans-serif;
-    font-size: 62.5%;
-    font-size: 10px;
+}
+
+#top-container {
+    padding-top: 150px;
+    padding-bottom: 150px;
+}
+
+.contact-form {
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
 }
 
 h2 {
+    text-align: center;
     font-size: 30px;
     font-weight: bold;
-    text-align: center;
-}
-
-p {
-    font-size: 18px;
-}
-
-
-/* Top Container */
-#top-container {
-    padding-top: 200px;
-    padding-bottom: 100px;
-    text-align: center;
-}
-
-
-/* Form */
-label (
-    padding-top: 60px;
-)
-
-.button {
-    padding-top: 20px;
-}
-
-
-
-
-/* Button */
-#top-container a {
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius: 2px;
-    border: 2px solid #fff;
-    padding: 6px 12px;
-    display: inline-block;
-    margin-top: 25px;
-    background: #43a047;
-    color: white;
-    transition: color 0.4s linear;
-}
-
-#top-container a:hover {
-    transition: .5s;
-    background: #003300;
-}
-
-#top-container a span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-#top-container a span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-}
-  
-#top-container a:hover span {
-    padding-right: 25px;
-}
-  
-#top-container a:hover span:after {
-    opacity: 1;
-    right: 0;
-}
-
-/* Container 2 */
-#bottom-container {
-    padding-bottom: 100px;
-    padding-top: 50px;
-    background: #f1ece7;
-}
-
-.header {
-    padding-top: 60px;
 }
 
 .header-p {
-    padding-bottom: 20px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 30px;
 }
 
-
-@media only screen and (max-width: 400px) {
-    .image {
-        height: 250px;
-        width: 250px;
-    }
+label {
+    line-height: 30px;
+    padding-top: 25px;
+    font-size: 18px;
 }
 
+.ss-q-short {
+    padding: 2px 30px 2px 0;
+    font-family: FontAwesome;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    text-indent: 10px;
+    border-radius: 5px;
+    border: .5px solid gray;
+    outline: 0 none;
+}
 
+.ss-q-short:focus {
+    border: 2px solid green;
+    outline: 0 none;
+}
 
+select {
+    border: .5px solid gray;
+    outline: 0 none;
+    width: 250px;
+    padding: 2px 30px 2px 0;
+    border-radius: 2px;
+    background: #e1f5fe;
+    opacity: .85;
+    font-family: FontAwesome;
+}
 
+select:focus {
+    border: 2px solid green;
+    outline: 0 none;
+}
+
+select {
+    outline-width: 0;
+}
+
+#ss-submit {
+    margin-top: 20px;
+    margin-bottom: 100px;
+    background: #003300;
+    color: #fff;
+    border-radius: 4px;
+    padding: 6px 12px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
+    display: block;
+    justify-content: center;
+}
+  
+#ss-submit:hover {
+    background: #43a047;
+}
+
+.jfk-button {
+    text-align: center;
+    margin: 0 auto;
+}
 
 
 
