--- a/css/footer.css
+++ b/css/footer.css
@@ -126,9 +126,11 @@ width: 65%;
 #footer .footer-top .footer-newsletter input[type="submit"] {
 background: #003300;
 border: 0;
+border-radius: 4px;
 padding: 6px 0;
 width: 35%; 
 text-align: center;
+font-weight: bold;
 color: white;
 transition: 0.3s;
 cursor: pointer;
