--- a/css/about.css
+++ b/css/about.css
@@ -59,6 +59,9 @@ body {
 }
 
 .card {
+  height: 80%;
+  width: 100%;
+  clear: both;
   margin-bottom: 100px;
   border-radius: 0;
   box-shadow: 5px 5px 15px #003300;
@@ -80,7 +83,7 @@ body {
 }
 
 .skill {
-  font-size: 15px;
+  font-size: 14px;
   text-align: center;
 }
 
