--- a/templates/website-audit.html
+++ b/templates/website-audit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <!-- CSS -->
-<link href="{{ url_for( 'static', filename='css/local-seo.css') }}" rel="stylesheet">
+<link href="{{ url_for( 'static', filename='css/audit.css') }}" rel="stylesheet">
 
 
 <!-- Container 1 -->
