--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,9 +12,8 @@
                 <div class="col-lg-2 col-md-6 footer-links">
                     <h4>Links</h4>
                     <ul>
-                        <li><a href="./seo.html">About SEO</a></li>
-                        <li><a href="./career.html">Careers</a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="{{ url_for('seo') }}">About SEO</a></li>
+                        <li><a href="{{ url_for('career') }}">Careers</a></li>
                     </ul>
                 </div>  
                 <div class="col-lg-3 col-md-6 footer-contact">
