--- a/templates/seo.html
+++ b/templates/seo.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <!-- CSS -->
-<link href="{{ url_for( 'static' filename='seo.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='css/seo2.css') }}" rel="stylesheet">
 
 
 <!-- SEO Section -->
@@ -14,7 +14,7 @@
             People who practice this study can effectively outrank authoritative websites in only thirty-five weeks. 
             While once the big brands had the top ranks in google.    
             More and more computer nerds are learning how to outrank these companies with the simple art of SEO and a helpful blog.
-        </p>
+            </p>
         <h2>Why is SEO important?</h2>
         <p>SEO is your undercover spy on your competitor's website. 
             This work breaks up in several different tasks you will have to do every week for all your content on your website. 
@@ -37,7 +37,7 @@
             Keywords analytics show you what topics people are interested in.
             KW's are also good to be used on H1, H2, H3, H4 and so on.            
             Use your KW's responsibly. 
-        </p>
+            </p>
         <p>
             When starting off its a good idea to use a free KW research tool.            
             Sites like,
